<resources>
    <string name="app_name">QuizApplication</string>
    <string name="start_quiz">Start quiz</string>
    <string name="results">Results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_1">Abdullah Mutaz Alshawa</string>
    <string name="option_2">Muhammad Ali</string>
    <string name="option_3">Khabib Nurmagomedov</string>
    <string name="option_4">Muhammed Saleh</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="next">Next</string>
    <string name="next_text">Next</string>
    <string name="prev_text">Previous</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="a">Answer</string>
</resources>