<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QuestionsFragment">

    <RadioGroup
        android:id="@+id/rgQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_name" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="143dp"
            android:layout_height="108dp"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="131dp"
            android:layout_height="131dp"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="128dp"
            android:layout_height="104dp"
            android:text="@string/option_3" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="136dp"
            android:layout_height="140dp"
            android:text="@string/option_4" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>